# VulkanEngine

./: .gitignore  .gitmodules  CMakeLists.txt
config/: app_config.json  logger_config.json  vk_config.json
shaders/: config.json
shaders/base/: base_config.json  setup.json
source/: config.h  core.h  main.cpp  pch.h
source/application/: vk_application.cpp  vk_application.h
source/application/shaders/: base.fs  base.vs
source/path_system/: path_system.cpp  path_system.h
source/shader_system/: shader_cache.cpp  shader_cache.h  shader_system.cpp  shader_system.h  shaderid.cpp  shaderid.h
source/shaders/base/: base.fs  base.vs
source/utils/data_structures/: hash.h  strid.cpp  strid.h  strid.hpp
source/utils/debug/: assertion.cpp  assertion.h  logger.cpp  logger.h  logger.hpp  logging.cpp  logging.h  logging.hpp
source/utils/file/: file.cpp  file.h  file.hpp
source/utils/json/: json.cpp  json.h  json.hpp
source/utils/timer/: timer.h
